sre/dummy-pdf-or-png/k8scharts/templatesWithValues/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummypdforpng
  labels:
    app: dummypdfOrpng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummypdfOrpng
  template:
    metadata:
      labels:
        app: dummypdfOrpng
    spec:
      containers:
      - name: dummypdforpng
        image: eu.gcr.io/sre-documentkeeper/dummy-pdf-or-png:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /-/health
            port: http
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /-/ready
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
