sre/dummy-pdf-or-png/k8scharts/templatesWithValues/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummypdforpng
  labels:
    app: dummypdfOrpng
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: dummypdfOrpng
