sre/dummy-pdf-or-png/k8scharts/templatesWithValues/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummypdforpng
  labels:
    app: dummypdfOrpng
spec:
  ingressClassName:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dummypdforpng
            port:
              number: 3000
